[package]
name = "chainlink_multicall_signoz"
version = "0.1.0"
edition = "2024"


[dependencies]

resolve = "0.2.0"
# Основной крейт alloy: без фичи "ethereum" здесь
alloy = { version = "1.0.12", features = ["full"] } 

alloy-primitives = "1.0.12"
alloy-sol-types  = "1.0.12"
alloy-transport-ws = "1.0.12"
alloy-provider = "1.0.12"
alloy-contract = "1.0.12"

tokio = { version = "1.38", features = ["full"] }
eyre = "0.6"
tracing-subscriber = "0.3"

# --- Добавления для OpenTelemetry и SigNoz ---
# Добавим эти зависимости только если включена фича "telemetry"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics", "trace"], optional = true }
opentelemetry-otlp = { version = "0.11.0", features = ["trace", "metrics"], optional = true }
opentelemetry-semantic-conventions = { version = "0.10.0", optional = true }
opentelemetry-proto = { version = "0.1.0", optional = true } # Часто нужен, хотя не всегда в документации
tonic = { version = "0.8.2", features = ["tls-roots"], optional = true }
dotenv = "0.15.0" # Всегда нужен для загрузки .env

[features]
# Определяем фичу "telemetry". По умолчанию она отключена.
# Когда эта фича включена, будут компилироваться и использоваться OpenTelemetry зависимости.
# Это позволяет отключить трассировку, когда она не нужна (например, для локальной разработки без SigNoz).
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "opentelemetry-proto",
    "tonic",
]